# My-Leetcode

./: .gitignore  README.md  content.js  manifest.json  script.js
extension/scripts/: content.js
scripts/: content.js
server/: formatCode.py  main.py  pyproject.toml  requirements.txt  vercel.json
server/api/: index.py
