[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["varun-s22 <93476421+varun-s22@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
